No bug - Format all classes based on new settings
Signed-off-by: Dawid Pakuła <zulus@w3des.net>